--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/user-event": "^7.2.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-dnd": "^11.1.1",
+    "react-dnd-html5-backend": "^11.1.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
   },
