--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dnd": "^11.1.1",
     "react-dnd-html5-backend": "^11.1.1",
     "react-dom": "^16.13.1",
+    "react-draggable": "^4.4.2",
     "react-scripts": "3.4.1"
   },
   "scripts": {
