Fixed homepage url

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "./",
+  "homepage": "https://nataliamateo.github.io/Puzzle",
   "name": "my-react-project",
   "version": "0.1.0",
   "private": true,
